src/objects/ConferenceRoomReservation__c.object
<CustomObject>
    <fields>
        <fullName>ConferenceRoom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConferenceRoom</label>
        <referenceTo>ConferenceRoom__c</referenceTo>
        <relationshipLabel>ConferenceRoomReservations</relationshipLabel>
        <relationshipName>ConferenceRoomReservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservation_End__c</fullName>
        <label>Reservation End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reservation_Start__c</fullName>
        <label>Reservation Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>ConferenceRoomReservation</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>ConferenceRoomReservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>